--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -29,8 +29,12 @@
                 Sign in with Google
             </a>
             <a class="w-100 btn btn-light btn-block bg-white" href="/oauth2/authorization/github" role="link" style="margin-top: 10px">
-                <img src="/images/github.png" th:src="@{/images/github.png}" width="24" style="margin-right: 5px;" alt="Sign in with Github">
-                Sign in with Github
+                <img src="/images/github.png" th:src="@{/images/github.png}" width="28" style="margin-right: 5px;" alt="Sign in with Github">
+                Sign in with GitHub
+            </a>
+            <a class="w-100 btn btn-light btn-block bg-white" href="/oauth2/authorization/facebook" role="link" style="margin-top: 10px">
+                <img src="/images/github.png" th:src="@{/images/facebook.svg}" width="22" style="margin-right: 5px;" alt="Sign in with Github">
+                Sign in with Facebook
             </a>
         </div>
     </form>
