--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -39,11 +39,11 @@
             </div>
             <div>
                 <button class="w-100 btn btn-lg btn-primary btn-block" type="submit">Register</button>
-                <a class="w-100 btn btn-light btn-block bg-white" href="/oauth2/authorization/google" role="link" style="margin-top: 10px">
+                <a class="w-100 btn btn-light btn-block bg-white" href="/oauth2/authorization/google" roleEntityJpa="link" style="margin-top: 10px">
                     <img src="/images/google.png" th:src="@{/images/google.png}" width="20" style="margin-right: 5px;" alt="Sign in with Google">
                     Register with Google
                 </a>
-                <a class="w-100 btn btn-light btn-block bg-white" href="/oauth2/authorization/github" role="link" style="margin-top: 10px">
+                <a class="w-100 btn btn-light btn-block bg-white" href="/oauth2/authorization/github" roleEntityJpa="link" style="margin-top: 10px">
                     <img src="/images/github.png" th:src="@{/images/github.png}" width="24" style="margin-right: 5px;" alt="Sign in with Github">
                     Register with Github
                 </a>
